--- a/webFinal/styles.css
+++ b/webFinal/styles.css
@@ -1,7 +1,18 @@
+body{
+    background-image: url("images/Img.6.jpg");
+}
 p{
     font-family: cursive;
 }
 h1{
     font-family: cursive;
-    font-size: 100px;
+}
+#center{
+    text-align:center;
+}
+h2{
+    font-family: cursive
+}
+p {
+  font-size: 22px;
 }
