--- a/webFinal/styles.css
+++ b/webFinal/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("images/Img.6.jpg");
+    background-image: url("images/Black.jpg");
 }
 p{
     font-family: cursive;
